update images and fix some small errors

--- a/docs/en-gb/modules/crm/pages/messenger-testphase.adoc
+++ b/docs/en-gb/modules/crm/pages/messenger-testphase.adoc
@@ -3,6 +3,9 @@
 :description: Learn how to use the Messenger in plentymarkets to send and receive emails.
 :author: team-crm
 
+[TIP]
+This page is currently in progress and is not yet complete.
+
 The *CRM » Messenger (Test phase)* menu allows you to manage the external communication with your customers via emails as well as the internal communication via messages. If you use the whisper mode in messages, these messages are only visible in your plentymarkets system and _cannot_ be seen by your contacts. 
 
 The *CRM » Messenger (Test phase)* menu is structured as follows:
@@ -67,7 +70,10 @@ include::_includes:page$tags-rights.adoc[]
 include::_includes:page$tags-creation.adoc[]
 
 [TIP]
+.Create tags for the availability *Message (billable)*
+====
 If you want to create messages that should be *billed* via the Messenger, you have to create tags for the availability _Message (billable)_ in the same way. You have to add these tags to the <<#create-message, message>>.
+====
 
 [#complete-assistant]
 === Completing the assistant
@@ -79,13 +85,11 @@ You have to complete the assistant for every inbox that you want to create. +
 You can assign tags to each inbox to be able to <<#search-message, filter>> for these tags later.
 
 [#service-activation]
-[discrete]
 ==== Service activation
 
 In this step, activate the Messenger service. If the button is blue (icon:toggle_on[set=material, role=skyBlue]), the service is activated. If the button is grey (icon:toggle_off[set=material, role=darkGrey]), the service has _not_ been activated yet.
 
 [#email-forwarding]
-[discrete]
 ==== Email forwarding
 
 In this step, a cryptic email address is automatically created that builds the forwarding email address. Use this email address to set up your email client. This ensures that your emails will be forwarded automatically. Note that you _cannot_ change this cryptic email address.
@@ -95,18 +99,12 @@ In the lower part, enter all email addresses that are allowed to send messages t
 You can add as many email addresses as you like by clicking on *Add* (icon:plus-square[role="green"]).
 
 [#verification-email-addresses]
-[discrete]
 ==== Verification of email addresses
 
 In this step, you can see the progress of the verification process. plentymarkets sends an email to all email addresses that you entered in the previous step <<#email-forwarding, Email forwarding>>. The system then checks whether the email addresses are valid and the forwarding works correctly.
 
 [#settings-email-despatch]
-[discrete]
 ==== Settings for the email despatch
-
-////
-ehemals: SMTP-Konfiguration
-////
 
 In this step, save the login details of the email inbox from which you want to send emails so that your plentymarkets system can send emails such as order or shipping confirmations from this email address. 
 
@@ -127,12 +125,7 @@ The following Messenger-related variables are available in the EmailBuilder:
 * Has billed minutes
 
 [#settings-email-receipt]
-[discrete]
 ==== Settings for receiving emails
-
-////
-ehemals: Inbox configuration
-////
 
 In this step, you select one or multiple tags that should be assigned to the messages when these messages are received from the forwarded addresses.
 
@@ -181,7 +174,7 @@ image::crm:messenger-new-message-suggestion-list.png[width=640, height=360]
 The following file types can be sent as an attachment: bmp, csv, gif, jpeg, json, pdf, png, tiff, txt, xlsx, zip.
 
 |[#intable-whisper-mode]*Whisper mode* (icon:visibility[set=material] / icon:visibility_off[set=material, role=skyBlue])
-|You can whisper messages to make these messages only visible for internal purposes but _not_ for your contacts. To do so, click on *Whisper mode* (icon:visibility[set=material]). You can see in this view that a message is whispered by means of the button icon:visibility_off[set=material, role=skyBlue]. The button changes from icon:forward_to_inbox[set=material] *SEND* to icon:visibility_off[set material] *WHISPER*. +
+|You can whisper messages to make these messages only visible for internal purposes but _not_ for your contacts. To do so, click on *Whisper mode* (icon:visibility[set=material]). You can see in this view that a message is whispered by means of the button icon:visibility_off[set=material, role=skyBlue]. The button changes from icon:forward_to_inbox[set=material] *SEND* to icon:visibility_off[set=material] *WHISPER*. +
 In the overview, whispered messages are shown in _italics_. +
 *_Note:_* Once the whisper mode has been activated for this message, you can <<#intable-bill-message, bill the message>>.
 
@@ -344,7 +337,14 @@ You can have the following columns displayed in the overview of the Messenger:
 Possible values: *Back end*, *REST*, *Plugin*, *PayPal Plugin*.
 
 |[#intable-overview-relations]*Relations*
-|The conversation relations are shown here, for example icon:person[set=material] _Name of the contact (contact ID)_, icon:shopping_cart[set=material] _Order ID_, icon:mail[set=material] _Email address_ and the subscribers of the conversation. In the line of the conversation, click on icon:chevron_right[set=material] to see all available relations at a glance. Click on icon:expand_more[set=material] to close the relation area again. The contact and the order have a direct link to the contact data record respectively to the order.
+a|The conversation relations are shown here, for example
+
+* icon:person[set=material] _Name of the contact (contact ID)_
+* icon:shopping_cart[set=material] _Order ID_
+* icon:mail[set=material] _Email address_ 
+* subscribers of the conversation.
+
+In the line of the conversation, click on icon:chevron_right[set=material] to see all available relations at a glance. Click on icon:expand_more[set=material] to close the relation area again. The contact and the order have a direct link to the contact data record respectively to the order.
 
 |[#intable-overview-subject]*Subject*
 |Shows the subject of the first message within the conversation.
@@ -587,11 +587,7 @@ TODO: Screenshot von einer einzelnen Nachricht mit den Mini-Icons hier einfügen
 
 [[image-messenger-edit-single-message]]
 .Editing a single message via the context menu
-image::crm:messenger-edit-single-message.png[width=640, height=360]
-
-////
-TODO: Screenshot "crm:messenger-edit-single-message.png" erneuern, da mittlerweile die Funktion zum Öffnen der Nachricht im plain text über den Pfeil hinzugekommen ist und die Funktion Anhänge herunterladen im Kontextmenü ergänzt wurde.
-////
+image::crm:messenger-edit-single-message-en.png[width=640, height=360]
 
 Once you selected a message within a conversation, you can display the messages’ content in plain text format by clicking on icon:chevron_right[set=material] at the beginning of the message. This way, you are able to see a preview of the message content already without <<#open-single-message, opening>> the entire message.
 
@@ -731,7 +727,14 @@ You can have the following columns displayed in the *New messages* folder of the
 Possible values: *Back end*, *REST*, *Plugin*, *PayPal Plugin*.
 
 |[#intable-new-messages-relations]*Relations*
-|The conversation relations are shown here, for example icon:person[set=material] _Name of the contact (contact ID)_, icon:shopping_cart[set=material] _Order ID_, icon:mail[set=material] _Email address_ and the subscribers of the conversation. In the line of the conversation, click on icon:chevron_right[set=material] to see all available relations at a glance. Click on icon:expand_more[set=material] to close the relation area again. The contact and the order have a direct link to the contact data record respectively to the order.
+a|The conversation relations are shown here, for example
+
+* icon:person[set=material] _Name of the contact (contact ID)_
+* icon:shopping_cart[set=material] _Order ID_
+* icon:mail[set=material] _Email address_ 
+* subscribers of the conversation.
+
+In the line of the conversation, click on icon:chevron_right[set=material] to see all available relations at a glance. Click on icon:expand_more[set=material] to close the relation area again. The contact and the order have a direct link to the contact data record respectively to the order.
 
 |[#intable-new-messages-subject]*Subject*
 |Shows the subject of the first message within the conversation.
@@ -804,7 +807,14 @@ You can have the following columns displayed in the *My messages* folder of the 
 Possible values: *Back end*, *REST*, *Plugin*, *PayPal Plugin*.
 
 |[#intable-my-messages-relations]*Relations*
-|The conversation relations are shown here, for example icon:person[set=material] _Name of the contact (contact ID)_, icon:shopping_cart[set=material] _Order ID_, icon:mail[set=material] _Email address_ and the subscribers of the conversation. In the line of the conversation, click on icon:chevron_right[set=material] to see all available relations at a glance. Click on icon:expand_more[set=material] to close the relation area again. The contact and the order have a direct link to the contact data record respectively to the order.
+a|The conversation relations are shown here, for example
+
+* icon:person[set=material] _Name of the contact (contact ID)_
+* icon:shopping_cart[set=material] _Order ID_
+* icon:mail[set=material] _Email address_ 
+* subscribers of the conversation.
+
+In the line of the conversation, click on icon:chevron_right[set=material] to see all available relations at a glance. Click on icon:expand_more[set=material] to close the relation area again. The contact and the order have a direct link to the contact data record respectively to the order.
 
 |[#intable-my-messages-subject]*Subject*
 |Shows the subject of the first message within the conversation.
@@ -881,7 +891,14 @@ You can have the following columns displayed in the trash folder of the Messenge
 Possible values: *Back end*, *REST*, *Plugin*, *PayPal Plugin*.
 
 |[#intable-trash-relations]*Relations*
-|The conversation relations are shown here, for example icon:person[set=material] _Name of the contact (contact ID)_, icon:shopping_cart[set=material] _Order ID_, icon:mail[set=material] _Email address_ and the subscribers of the conversation. In the line of the conversation, click on icon:chevron_right[set=material] to see all available relations at a glance. Click on icon:expand_more[set=material] to close the relation area again. The contact and the order have a direct link to the contact data record respectively to the order.
+a|The conversation relations are shown here, for example
+
+* icon:person[set=material] _Name of the contact (contact ID)_
+* icon:shopping_cart[set=material] _Order ID_
+* icon:mail[set=material] _Email address_
+* subscribers of the conversation.
+
+In the line of the conversation, click on icon:chevron_right[set=material] to see all available relations at a glance. Click on icon:expand_more[set=material] to close the relation area again. The contact and the order have a direct link to the contact data record respectively to the order.
 
 |[#intable-trash-subject]*Subject*
 |Shows the subject of the first message within the conversation.
