--- a/docs/de-de/modules/daten/pages/catalogues-status.adoc
+++ b/docs/de-de/modules/daten/pages/catalogues-status.adoc
@@ -1,4 +1,4 @@
-= Katalogstatus prüfen
+= Katalogexportstatus prüfen
 :keywords:
 :description:
 :page-index:
@@ -71,8 +71,11 @@ include::page$catalogues-status.adoc[tag=what-is-a-job]
 | *Initiator:in*
 | Wie wurde der Export gestartet?
 
-* *Benutzer:in* = Der Exportvorgang wurde von einer Benutzer:in gestartet. Wenn du mit der Maus auf den Namen der Person zeigst, wird auch die Benutzer:innen-ID angezeigt.
-* *Cron* = Der Exportvorgang wurde automatisch durch einen Cron gestartet.
+* *Benutzer:in* = Der Exportvorgang wurde von einer Benutzer:in gestartet. Wenn du mit der Maus auf den Namen der Person zeigst, wird auch die ID der Benutzer:in angezeigt.
+* *Cron* = Der Exportvorgang wurde automatisch durch einen Cron gestartet. Wenn du mit der Maus auf das Wort "Cron"zeigst, wird angezeigt, welcher Cron den Export gestartet hat. +
+  *20* = Export läuft alle 20 Minuten. +
+  *60* = Export läuft einmal pro Stunde. +
+  *1440* = Export läuft einmal pro Tag.
 * *Debug* = Der Exportvorgang wurde zum Debuggen gestartet.
 
 | *Startzeit*
