--- a/docs/en-gb/modules/data/pages/catalogues-status.adoc
+++ b/docs/en-gb/modules/data/pages/catalogues-status.adoc
@@ -1,4 +1,4 @@
-= Checking catalogue status
+= Checking catalogue export status
 :keywords:
 :description:
 :page-index:
@@ -71,8 +71,11 @@ include::page$catalogues-status.adoc[tag=what-is-a-job]
 | *Initiator*
 | How was the export started?
 
-* *User* = The export was started by a user. Point your cursor to the name of the user to also show the user ID.
-* *Cron* = The export was automatically started by a cron.
+* *User* = The export was started by a user. Point your mouse at the name of the user to also show the user ID.
+* *Cron* = The export was automatically started by a cron. Point your mouse at the "cron" text to show which cron started the export. +
+  *20* = Export runs every 20 minutes. +
+  *60* = Export runs hourly. +
+  *1440* = Export runs once a day.
 * *Debug* = The export has started for debugging purposes.
 
 | *Start time*
