--- a/docs/de-de/modules/ROOT/nav.adoc
+++ b/docs/de-de/modules/ROOT/nav.adoc
@@ -263,7 +263,7 @@
 ***** xref:daten:warenbewegung-exportieren.adoc[Warenbewegungen]
 ***** xref:daten:zahlungen-exportieren.adoc[Zahlungen]
 **** xref:daten:catalogues-manage.adoc[Kataloge verwalten]
-**** xref:daten:catalogues-status.adoc[Katalogstatus prüfen]
+**** xref:daten:catalogues-status.adoc[Exportstatus prüfen]
 ** xref:daten:datenlog.adoc[Daten-Log]
 ** xref:daten:datenbereinigung.adoc[Datenbereinigung]
 ** xref:daten:backup.adoc[Datenbank-Backup]
