--- a/docs/en-gb/modules/data/pages/catalogues-status.adoc
+++ b/docs/en-gb/modules/data/pages/catalogues-status.adoc
@@ -12,7 +12,7 @@ include::_includes:page$new-page-info-box.adoc[]
 == Getting to know the status overview
 
 You are in the menu *Data » Catalogue export status*. When you open the menu, a list of all exports is shown. This list is updated automatically every 20 seconds.
-
+**
 [[table-overview-columns]]
 .Columns of the overview
 [cols="1,3a"]
@@ -73,9 +73,9 @@ include::page$catalogues-status.adoc[tag=what-is-a-job]
 
 * *User* = The export was started by a user. Point your mouse at the name of the user to also show the user ID.
 * *Cron* = The export was automatically started by a cron. Point your mouse at the "cron" text to show which cron started the export. +
-  *20* = Export runs every 20 minutes. +
-  *60* = Export runs hourly. +
-  *1440* = Export runs once a day.
+  ** *20* = Export runs every 20 minutes. +
+  ** *60* = Export runs hourly. +
+  ** *1440* = Export runs once a day.
 * *Debug* = The export has started for debugging purposes.
 
 | *Start time*
@@ -149,11 +149,13 @@ Click on an export to see details about the export process.
 | *Error*
 | A list of errors. This information is not updated automatically. Click on icon:refresh[set=material] to manually update the information.
 
-| *Progress logs* (icon:playlist_play[set=material])
+| *Progress logs* +
+(icon:playlist_play[set=material])
 | Click to show the logs.
 The list of logs is shown on the left. Click on one of the logs to show more details about the progress.
 
-| *Performance logs* (icon:bar_chart[set=material])
+| *Performance logs* +
+(icon:bar_chart[set=material])
 | This setting is currently without function. Stay tuned.
 
 | *Data* +
