--- a/docs/de-de/modules/maerkte/partials/verkaufspreis-festlegen.adoc
+++ b/docs/de-de/modules/maerkte/partials/verkaufspreis-festlegen.adoc
@@ -1,5 +1,17 @@
 Mit Verkaufspreisen legst du die Bedingungen fest, unter denen eine Variante zu einem bestimmten Preis und über einen bestimmten Verkaufskanal verkauft wird. Um Varianten auf {referrer} zu verkaufen, benötigst du deshalb einen Verkaufspreis, bei dem die Auftragsherkunft {referrer} aktiviert ist. Der Preis, den du für diesen Verkaufspreis an deinen Varianten speicherst, wird auf {referrer} angezeigt.
 
+[.collapseBox]
+.Was ist ein Verkaufspreis?
+--
+Mit einem xref:artikel:preise.adoc#100[Verkaufspreis] legst du die Bedingungen fest, unter denen eine Variante zu einem bestimmten Preis und auf einem bestimmten Verkaufskanal verkauft wird. Du kannst deine Artikel zum Beispiel in deinem Webshop günstiger anbieten als auf Amazon. Oder du kannst deine Artikel günstiger an B2B-Kunden verkaufen als an B2C-Kunden. +
+In deinem plentymarkets System sind bereits zwei Standard-Verkaufspreise vorkonfiguriert. Du kannst aber auch neue Verkaufspreise erstellen und deinen Bedürfnissen anpassen. Neben Standard-Verkaufspreisen kannst du auch *UVPs*, *Aktionspreise* und *Setpreise* erstellen.
+--
+
+ifdef::kaufland[]
+*_Hinweis:_* Für Kaufland musst du zuerst einen regulären Verkaufspreis ohne *Preistyp* in plentymarkets festlegen. +
+Wenn du für Kaufland einen *UVP* verwenden möchtest, musst du den *UVP* erst in deinem Konto bei Kaufland freischalten. Erstelle danach in plentymarkets einen Verkaufspreis mit dem Preistyp *UVP* und aktiviere die Herkunft *Kaufland.de*.
+endif::kaufland[]
+
 [.instruction]
 Verkaufspreis für {referrer} festlegen:
 
