--- a/docs/de-de/modules/daten/pages/catalogues-status.adoc
+++ b/docs/de-de/modules/daten/pages/catalogues-status.adoc
@@ -131,7 +131,7 @@ include::page$catalogues-status.adoc[tag=export-types]
 --
 
 [#status-details]
-== Detailansicht
+== Detailansicht kennenlernen
 
 Klicke auf einen Export, um Details zum Exportvorgang anzuzeigen.
 
