--- a/docs/en-gb/modules/markets/partials/define-sales-price.adoc
+++ b/docs/en-gb/modules/markets/partials/define-sales-price.adoc
@@ -18,7 +18,8 @@ Defining a sales price for {referrer}:
 . Go to *Setup » Item » Sales prices » [Open sales price]*. +
 *_Tip:_* No sales prices? Then create a xref:item:prices.adoc#100[new sales price] first.
 . Open the *Settings* tab.
-. Activate the referrer *{referrer}*.
+. Activate the referrer *{referrer}*. +
+ifdef::zalando[*_Important:_* Activate the referrer *Zalando*. The sub-referrers for each Zalando platform (Zalando DE, Zalando NL etc.) will be ignored.]
 ifdef::mirakl-sales-price[]
 . Activate the referrer *Mirakl*.
 endif::mirakl-sales-price[]
