Added collapse box for sales prices and info about Kaufland RRP (#536)
* Added collapse box for sales prices + info for Kaufland RRP

* Update define-sales-price.adoc

--- a/docs/en-gb/modules/markets/partials/define-sales-price.adoc
+++ b/docs/en-gb/modules/markets/partials/define-sales-price.adoc
@@ -1,12 +1,25 @@
 Sales prices define the conditions under which a variation is sold at a specific price and on a specific sales channel. That means that to sell variations on {referrer}, you need a sales price in which the order referrer {referrer} is activated. The price that you save for this sales price is the price that will be shown on {referrer}.
 
+[.collapseBox]
+.What is a sales price?
+--
+xref:item:prices.adoc#100[Sales prices] define the conditions under which a variation is sold at a specific price and on a specific sales channel. For example, you can sell your items at a lower price in your webshop than on Amazon. Or you can sell products cheaper to B2B customers than to B2C customers. +
+Two default sales prices are already configured in your plentymarkets system. However, you can also create new sales prices and edit them individually. In addition to default sales prices, you can also create *RRPs*, *special offers*, and *set prices*.
+--
+
+ifdef::kaufland[]
+*_Note:_* You have to define a sales price without *price type* for Kaufland first. +
+If you want to use an *RRP* for Kaufland, then you first have to activate the *RRP* in your Kaufland account. Afterwards, create a sales price with the price type *RRP* in plentymarkets and activate the referrer *Kaufland.de*.
+endif::kaufland[]
+
 [.instruction]
 Defining a sales price for {referrer}:
 
 . Go to *Setup » Item » Sales prices » [Open sales price]*. +
 *_Tip:_* No sales prices? Then create a xref:item:prices.adoc#100[new sales price] first.
 . Open the *Settings* tab.
-. Activate the referrer *{referrer}*.
+. Activate the referrer *{referrer}*. +
+ifdef::zalando[*_Important:_* Activate the referrer *Zalando*. The sub-referrers for each Zalando platform (Zalando DE, Zalando NL etc.) will be ignored.]
 ifdef::mirakl-sales-price[]
 . Activate the referrer *Mirakl*.
 endif::mirakl-sales-price[]
