--- a/docs/en-gb/modules/crm/pages/edit-contact.adoc
+++ b/docs/en-gb/modules/crm/pages/edit-contact.adoc
@@ -539,7 +539,7 @@ Here, you can see all orders of the contact. When you open the contact data reco
 
 Click on *Options* (icon:add[set=material]) in the top right to create a new order, a new offer or a new subscription. For further information about this context menu, refer to the xref:crm:search-contact.adoc#context-menu-overview[Context menu in the overview] chapter on the xref:crm:search-contact.adoc#[Searching for a contact] page.
 
-Click on *Configure columns* (icon:settings[set=material]) on the top right and decide which columns to show in the *Orders* area. Click on icon:sort[set=material] to change the order of the columns with drag-and-drop. The following columns are available:
+Click on *Configure columns* (icon:settings[set=material]) on the top right and decide which columns to show in the *Orders* area. Click on icon:drag_indicator[set=material] to change the order of the columns with drag-and-drop. The following columns are available:
 
 * Order ID 
 * Main (order)
@@ -556,7 +556,7 @@ Click on *Refresh data* (icon:refresh[set=material]) in the top right to refresh
 
 Here, you can see the addresses that are saved for the contact. Note that only 25 address data records can be shown.
 
-Click on *Configure columns* (icon:settings[set=material]) on the top right and decide which columns to show in the *Addresses* area. Click on icon:sort[set=material] to change the order of the columns with drag-and-drop. The following columns are available:
+Click on *Configure columns* (icon:settings[set=material]) on the top right and decide which columns to show in the *Addresses* area. Click on icon:drag_indicator[set=material] to change the order of the columns with drag-and-drop. The following columns are available:
 
 * ID
 * Company
@@ -851,7 +851,7 @@ After you have <<#reload-contact-data-record, reloaded the contact data record>>
 [#columns-company-overview]
 ==== Configuring the columns in the company overview
 
-Click on *Configure columns* (icon:settings[set=material]) on the top right and decide which columns to show in the *Company* area. Click on icon:sort[set=material] to change the order of the columns with drag-and-drop. The following columns are available:
+Click on *Configure columns* (icon:settings[set=material]) on the top right and decide which columns to show in the *Company* area. Click on icon:drag_indicator[set=material] to change the order of the columns with drag-and-drop. The following columns are available:
 
 * ID
 * Name
@@ -927,7 +927,7 @@ Configuring columns:
 . Click in the *Account* area on *Configure columns* (icon:settings[set=material]). +
 → The window *Configure columns* opens.
 . Select which columns you want to be displayed. Note <<#table-account-balance-contact>>.
-. Move (icon:sort[set=material]) the columns so they are displayed in the order you need them in.
+. Move (icon:drag_indicator[set=material]) the columns so they are displayed in the order you need them in.
 . Click on *Confirm* to save your settings.
 
 When you have adapted the table once, these settings are saved. A list of the available columns can be found in <<#table-account-balance-contact>>. 
@@ -1164,7 +1164,7 @@ Would you like to know which types and sub-types are available in the options? S
 
 Here, you can see all of the contact’s tickets from the *CRM » Ticket system* menu. 
 
-Click on *Configure columns* (icon:settings[set=material]) to decide which columns to show in the *Tickets* area. Click on icon:sort[set=material] to change the order of the columns with drag-and-drop. The following columns are available:
+Click on *Configure columns* (icon:settings[set=material]) to decide which columns to show in the *Tickets* area. Click on icon:drag_indicator[set=material] to change the order of the columns with drag-and-drop. The following columns are available:
 
 * ID
 * Type
