--- a/docs/de-de/modules/crm/pages/kontakt-bearbeiten.adoc
+++ b/docs/de-de/modules/crm/pages/kontakt-bearbeiten.adoc
@@ -612,7 +612,7 @@ Wenn die Adresse mit einem Auftrag verknüpft ist, kannst du die Adresse _nicht_
 | *Lieferadresse ableiten*
 |Mit einem Klick auf icon:delivery_note[set=plenty] wird eine neue Lieferadresse auf Basis der aktuell gewählten Adresse erstellt. Um eine neue Adresse mit einer neuen ID zu erstellen, müssen Änderungen an der neuen Lieferadresse vorgenommen werden.
 
-2+^| *Neue Adresse*
+2+^| *Neue Adresse* / *Adresse* + _ID_
 
 | *Rechnungsadresse*
 a| Um welchen Typen handelt es sich bei der neuen Adresse? Wähle eine der folgenden Optionen: +
