ADD more detailed explanations to lowest price function

--- a/docs/de-de/modules/artikel/pages/verzeichnis.adoc
+++ b/docs/de-de/modules/artikel/pages/verzeichnis.adoc
@@ -1865,7 +1865,8 @@ In der Verordnung wird in § 11 (1) festgelegt, wie die Preise angegeben werden 
 
 //tag::lowest-price-thirty-days[]
 
-*_Hintergrund-Info_*:
+[discrete]
+==== Hintergrund-Info
 
 Zum 28.05.2022 tritt eine neue link:https://www.bmwk.de/Redaktion/DE/Downloads/P-R/novelle-der-preisangabenverordnung-pangv.pdf?__blob=publicationFile&v=4[Preisangabenverordnung^] in Kraft.
 In der Verordnung wird in § 11 (1) festgelegt, wie die Preise angegeben werden müssen, wenn Waren ermäßigt werden:
@@ -1878,11 +1879,13 @@ In der Verordnung wird in § 11 (1) festgelegt, wie die Preise angegeben werden 
 
 ---
 
-*_Was Händler tun müssen_*:
+[discrete]
+==== Wie pflege ich den Preis im Backend?
 
 Der niedrigste Preis kann manuell in plentymarkets eingegeben, importiert oder automatisch berechnet werden.
 
 IMPORTANT: Dieser Wert wird ab link:https://marketplace.plentymarkets.com/ceres_4697[plentyShop LTS-Version 5.0.51^] im Webshop angezeigt.
+Wie du den Wert in deinem plentyShop anzeigen kannst, wird weiter unten erklärt.
 
 [.instruction]
 Manuelle Eingabe:
@@ -1906,9 +1909,6 @@ Falls du die Änderungshistorie bisher noch nicht aktiviert hast, erscheint ein 
 Du musst deine Entscheidung zur Aktivierung der kostenpflichtigen Änderungshistorie bestätigen.
 . *Speichere* (icon:save[set=plenty, role="darkGrey"]) die Einstellungen.
 
-IMPORTANT: Der niedrigste Preis kann nur dann automatisch berechnet werden, wenn die Änderungshistorie aktiviert ist _und_ wenn sich der Preis mindestens einmal bei aktivierter Änderungshistorie geändert wurde.
-Möglicherweise musst du also den Artikelpreis um ein paar Cent ändern, damit der Automatismus greift.
-
 TIP: Der niedrigste Preis wird automatisch berechnet, etwa 90 Sekunden nachdem du die Einstellung zum ersten Mal aktiviert und gespeichert hast. Danach wird er automatisch einmal pro Nacht berechnet.
 
 ---
@@ -1920,7 +1920,23 @@ Import:
 . Erstelle einen neuen Import des Typs *Artikel*.
 . Nutze die Zuordnungsfelder *Variantenpreise / Niedrigster Preis der letzten 30 Tage* und *Variantenpreise / Niedrigsten Preis automatisch berechnen*, um die Einstellungen per Import zu steuern.
 * xref:daten:ElasticSync.adoc#[Weitere Informationen zum Import-Tool im Allgemeinen].
-* xref:daten:elasticSync-artikel.adoc#2330[Weitere Informationen zu den Zuordnungsfeldern].
+* xref:daten:elasticSync-artikel.adoc#1031[Weitere Informationen zu den Zuordnungsfeldern].
+
+---
+
+[discrete]
+==== Wie zeige ich den Preis im plentyShop an?
+
+. Öffne das Menü *Plugins » Plugin-Set-Übersicht » [Plugin-Set öffnen]*.
+* Stelle sicher, dass das Plugin *plentyShop LTS* die Version 5.0.51 oder höher nutzt.
+Aktualisiere das Plugin, falls erforderlich.
+. Öffne das Menü *CMS » ShopBuilder » [Inhalt öffnen] » [Widget "Artikel / Artikelpreis" öffnen]*.
+* Stelle sicher, dass die Option *Streichpreis anzeigen* aktiviert ist.
+. Öffne das Menü *Artikel » Artikel-UI » [Variante öffnen] » Element: Verkaufspreise*.
+* Stelle sicher, dass ein Wert in die Spalte *Niedrigster Preis der letzten 30 Tage* hinterlegt ist.
+
+Wenn diese Bedingungen erfüllt sind, wird im plentyShop unterhalb des Preises automatisch der Preis der letzen 30 Tage ausgegeben.
+xref:webshop:best-practices.adoc#niedrigster-preis[Weitere Informationen zur Anzeige im plentyShop].
 
 //end::lowest-price-thirty-days[]
 
