--- a/docs/en-gb/modules/data/pages/elasticSync-item.adoc
+++ b/docs/en-gb/modules/data/pages/elasticSync-item.adoc
@@ -1201,9 +1201,49 @@ You can find the result of the import in the back end menu: xref:item:managing-i
 [#1031]
 ==== Lowest price in the last 30 days
 
-Do you want to manually enter the variation's lowest price from the last 30 days?
-Enter the monetary price into your CSV file.
+Have you calculated the lowest price of the last 30 days yourself?
+You can use this field to import the monetary value for several variations at once.
+
+[TIP]
+It can be helpful to have the variation's _current price_ as a frame of reference.
+xref:data:formatdesigner-item.adoc#2000[You can export this value with the FormatDesigner].
+
+*_What sellers need to do_*:
+
+First, enter the variation IDs and the monetary values into different columns of your CSV file.
+Example:
+
+[cols="1,1,1,1"]
+|===
+|Variation ID	|Price 1	|Price 2	|Price 3
+
+|1000
+|19.99
+|14.99
+|21.99
+
+|1001
+|29.99
+|24.99
+|26.99
+
+|1002
+|39.99
+|34.99
+|36.99
+|===
+
+Use the variation ID as the matching field.
+Import the monetary values with the mapping field.
+For example, this could look like:
+
+image::data:import-lowest-price-30-days.png[]
+
 xref:item:prices.adoc#950[Learn more about the "lowest price" function].
+
+[.collapseBox]
+.*Further information about the mapping field*
+--
 
 *_Default value_*: No default value
 
@@ -1216,14 +1256,46 @@ Also use the drop-down list to select the sales price.
 
 You can find the result of the import in the back end menu: *Item » Item UI » [Open variation] » Element: Sales prices » Column: Lowest price during the last 30 days*
 
+--
+
 '''
 
 [#1032]
 ==== Calculate lowest price automatically
 
 Do you want to automatically calculate the variation's lowest price from the last 30 days?
-Enter your answer into the CSV file.
+You can use this field to give your answer.
+
+*_What sellers need to do_*:
+
+First, enter the variation IDs and your decision (whether the lowest price should automatically be calculated) into different columns of your CSV file.
+Example:
+
+[cols="1,1"]
+|===
+|Variation ID	|Automate (yes/no)
+
+|1000
+|1
+
+|1001
+|1
+
+|1002
+|0
+|===
+
+Use the variation ID as the matching field.
+Import the information (whether the lowest price should automatically be calculated) with the mapping field.
+For example, this could look like:
+
+image::data:import-lowest-price-automatic.png[]
+
 xref:item:prices.adoc#950[Learn more about the "lowest price" function].
+
+[.collapseBox]
+.*Further information about the mapping field*
+--
 
 *_Default value_*: `0`
 
@@ -1244,6 +1316,8 @@ The lowest price will automatically be calculated.
 Also use the drop-down list to select the sales price.
 
 You can find the result of the import in the back end menu: *Item » Item UI » [Open variation] » Element: Sales prices » Column: Lowest price during the last 30 days*
+
+--
 
 '''
 
