--- a/docs/en-gb/modules/data/pages/formatdesigner-item.adoc
+++ b/docs/en-gb/modules/data/pages/formatdesigner-item.adoc
@@ -945,11 +945,28 @@ _Example:_ 512;"SomeText":"en"
 |====
 |Field |Explanation
 
+//scheint nicht zu funktionieren
+|createdAt
+|The timestamp when the sales price was created.
+
+//scheint nicht zu funktionieren
+|lowestPrice
+|The xref:item:prices.adoc#950[lowest price of the last 30 days]. This is a monetary value, i.e. a number.
+
+//scheint nicht zu funktionieren
+|lowestPriceCalculation
+|Indicates whether the xref:artikel:preise.adoc#950[lowest price of the last 30 days] is automatically calculated with the help of the change history.
+
 |netPrice
 |Net prices saved for the selected sales price
 
 |price
 |Gross prices saved for the selected sales price
+
+//scheint nicht zu funktionieren
+|updatedAt
+|The timestamp when the sales price was last updated.
+
 |====
 
 
