--- a/docs/en-gb/modules/item/pages/prices.adoc
+++ b/docs/en-gb/modules/item/pages/prices.adoc
@@ -446,18 +446,21 @@ This can be done with the xref:item:changes.adoc#[change history], assuming that
 .*I am required to display the lowest price of the last 30 days. How can I do that?*
 --
 
-*_Background info_*:
+[discrete]
+==== Background info
 
 A new link:https://www.bmwk.de/Redaktion/DE/Downloads/P-R/novelle-der-preisangabenverordnung-pangv.pdf?__blob=publicationFile&v=4[regulation on specifying prices^] will go into effect on May 28th, 2022.
 In these regulations, § 11 (1) specifies how prices must be displayed when products are discounted.
 
 ---
 
-*_What sellers need to do_*:
+[discrete]
+==== How do I save the price in the back end?
 
 The lowest price can manually be entered into plentymarkets, imported or automatically calculated.
 
 IMPORTANT: This value is displayed in the webshop starting from link:https://marketplace.plentymarkets.com/ceres_4697[plentyShop LTS version 5.0.51^].
+Instructions for displaying the value in your plentyShop are found further below.
 
 [.instruction]
 Manual entry:
@@ -481,9 +484,6 @@ If you have not yet activated the change history, then you will see a pop-up win
 You will have to confirm your decision to activate the change history.
 . *Save* (icon:save[set=plenty, role="darkGrey"]) the settings.
 
-IMPORTANT: In order for the lowest price to automatically be calculated, the change history must have been activated _and_ the price must have been changed at least once since activating the change history.
-This means that you might have to change the item price by a few cents in order for the automatic function to take effect.
-
 TIP: The lowest price will automatically be calculated approximately 90 seconds after you have activated and saved the setting for the first time. Afterwards, it will automatically be calculated every night.
 
 ---
@@ -495,7 +495,22 @@ Import:
 . Create a new import of the type *Item*.
 . Use the mapping fields *Sales prices / Lowest price of the last 30 days* and *Sales prices / Calculate lowest price automatically* to control the settings via import.
 * xref:data:ElasticSync.adoc#[Further information about the import tool in general].
-* xref:data:elasticSync-item.adoc#2330[Further information about the mapping fields].
+* xref:data:elasticSync-item.adoc#1031[Further information about the mapping fields].
+
+---
+
+[discrete]
+==== How do I display the price in my plentyShop?
+
+. Open the menu *Plugins » Plugin set overview » [Open plugin set]*.
+* Make sure that the plugin *plentyShop LTS* uses version 5.0.51 or higher.
+Update the plugin if necessary.
+. Open the menu *CMS » ShopBuilder » [Open content] » [Open widget "Item / Item price"]*.
+* Make sure that the option *Display strikethrough price* is activated.
+. Open the menu *Item » Item UI » [Open variation] » Element: Sales prices*.
+* Make sure that a value is entered into the column *Lowest price during the last 30 days*.
+
+If these conditions are met, then the lowest price of the last 30 days will automatically be displayed in the plentyShop. It will appear underneath the price.
 
 --
 
